alteração nas linhas 9, 10 e 11.
adicionado título a linha 9
paragrafo a linha 10
imagem a linha 11.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>meu trabalho</title>
 </head>
 <body>
-    <h1>teu pai de calcinha</h1>
+    <h1>Meu título</h1>
+    <p><strong> ipsum dolor sit amet consectetur adipisicing elit. Corporis quisquam, incidunt facilis sed aut ipsum quis esse accusamus modi dolorum? Quas praesentium veniam eos ea vel atque, dicta placeat asperiores?</strong></strong></p>
+    <img src="img/tank.jpg" alt="tanque de guerra T - 34" width="500px" height="450px">
+
 </body>
 </html>
